--- a/template/covid_post.html
+++ b/template/covid_post.html
@@ -20,7 +20,7 @@
 <!--Navigator-bar-->
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/thecup/">
             <img class="logo" height="40" src="../resources/img/Logo.svg" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -40,8 +40,7 @@
                         Kinh tế
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Phân nhóm 1</a></li>
-                        <li><a class="dropdown-item" href="#">Phân nhóm 2</a></li>
+                        <li><a class="dropdown-item" href="/thecup/template/economy.html">Trang kinh tế</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -54,8 +53,7 @@
                         Sống
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Phân nhóm 1</a></li>
-                        <li><a class="dropdown-item" href="#">Phân nhóm 2</a></li>
+                        <li><a class="dropdown-item" href="/thecup/template/economy.html">Trang Sống</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -68,7 +66,7 @@
                         Công nghệ
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Phân nhóm 1</a></li>
+                        <li><a class="dropdown-item" href="/thecup/template/economy.html">Trang Sống</a></li>
                         <li><a class="dropdown-item" href="#">Phân nhóm 2</a></li>
                         <li>
                             <hr class="dropdown-divider">
@@ -83,15 +81,19 @@
                     <a class="nav-link" href="#">Thể thao</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="/thecup/template/search.html">
                         <i class="fas fa-search"></i>
                     </a>
-
                 </li>
             </ul>
             <div class="nav-register">
-                <button class="btn btn-light" type="submit">Đăng nhập</button>
-                <button class="btn btn-light ms-1" type="submit">Đăng ký</button>
+                <a href="/thecup/template/login.html" class="">
+                    <button class="btn btn-light" type="submit">Đăng nhập</button>
+                </a>
+                <a href="/thecup/template/register.html" class="">
+                    <button class="btn btn-light ms-1" type="submit">Đăng ký</button>
+                </a>
+
             </div>
         </div>
     </div>
@@ -115,10 +117,12 @@
                         <p class="title-name">Cần biết về Covid-19 và tiêm phòng ngừa Covid-19</p>
                         <div class="author-date-rating">
                             <div class="author">
-                                <span class="material-icons material-icons-outlined">
-                                person
-                                </span>
-                                <span>Chu Thụy Nguyên</span>
+                                <a href="/thecup/template/author.html">
+                                    <span class="material-icons material-icons-outlined">
+                                    person
+                                    </span>
+                                    <span>Chu Thụy Nguyên</span>
+                                </a>
                             </div>
                             <div class="date">
                                 <span class="material-icons material-icons-outlined">
