--- a/template/covid_post.html
+++ b/template/covid_post.html
@@ -230,7 +230,7 @@
                             </div>
                         </div>
 
-                        <p class="subsidiary mt-5">Tin bên lề</p>
+                        <p class="subsidiary">Tin bên lề</p>
                         <div class="text-break"></div>
                         <p class="post-text">
                             Có nghiên cứu cho thấy những người thường xuyên mang kính, như kính cận, kính lão… nguy cơ
