--- a/template/covid_post.html
+++ b/template/covid_post.html
@@ -278,19 +278,22 @@
                         </div>
                         <div class="comment">
                             <div class="title">
-                                <p>Bình luận</p>
+                                <p>Bình luận mới nhất</p>
                             </div>
                             <div class="comment-block">
                                 <div class="row">
                                     <div class="col-md-1">
-                                        <div class="user-avatar"></div>
+                                        <div class="user-avatar">
+                                            <img src="/thecup/resources/img/user-img/user-img-1.png" alt="">
+                                        </div>
                                     </div>
                                     <div class="col-md-11">
                                         <p class="user-name">tranvanan122</p>
-                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi
-                                            đã thấy
+                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi đã thấy
                                             hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
-                                        <p class="comment-date-time">12/05/2021 20:12</p>
+                                        <a href="">
+                                            <p class="post">Kĩ năng sống trong công sở</p>
+                                        </a>
                                     </div>
                                 </div>
                                 <button class="btn btn-outline-secondary dropdown-toggle comment-block-button fas fa-ellipsis-v"
@@ -308,14 +311,73 @@
                             <div class="comment-block">
                                 <div class="row">
                                     <div class="col-md-1">
-                                        <div class="user-avatar"></div>
+                                        <div class="user-avatar">
+                                            <img src="/thecup/resources/img/user-img/user-img-1.png" alt="">
+                                        </div>
                                     </div>
                                     <div class="col-md-11">
-                                        <p class="user-name">phanvantai123</p>
-                                        <p class="comment-text">Đã từng là quản lý và đã thất bại. Thật sự là không hề
-                                            dễ. Cảm ơn
-                                            tác giá đã có một bài viết rất ý nghĩa và sâu sắc</p>
-                                        <p class="comment-date-time">12/05/2021 20:12</p>
+                                        <p class="user-name">tranvanan122</p>
+                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi đã thấy
+                                            hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
+                                        <a href="">
+                                            <p class="post">Kĩ năng sống trong công sở</p>
+                                        </a>
+                                    </div>
+                                </div>
+                                <button class="btn btn-outline-secondary dropdown-toggle comment-block-button fas fa-ellipsis-v"
+                                        type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
+                                <ul class="dropdown-menu dropdown-menu-end">
+                                    <li><a class="dropdown-item" href="#">Thích</a></li>
+                                    <li><a class="dropdown-item" href="#">Không thích</a></li>
+                                    <li><a class="dropdown-item" href="#">Báo cáo</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">Ẩn</a></li>
+                                </ul>
+                            </div>
+                            <div class="comment-block">
+                                <div class="row">
+                                    <div class="col-md-1">
+                                        <div class="user-avatar">
+                                            <img src="/thecup/resources/img/user-img/user-img-1.png" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-11">
+                                        <p class="user-name">tranvanan122</p>
+                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi đã thấy
+                                            hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
+                                        <a href="">
+                                            <p class="post">Kĩ năng sống trong công sở</p>
+                                        </a>
+                                    </div>
+                                </div>
+                                <button class="btn btn-outline-secondary dropdown-toggle comment-block-button fas fa-ellipsis-v"
+                                        type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
+                                <ul class="dropdown-menu dropdown-menu-end">
+                                    <li><a class="dropdown-item" href="#">Thích</a></li>
+                                    <li><a class="dropdown-item" href="#">Không thích</a></li>
+                                    <li><a class="dropdown-item" href="#">Báo cáo</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">Ẩn</a></li>
+                                </ul>
+                            </div>
+                            <div class="comment-block">
+                                <div class="row">
+                                    <div class="col-md-1">
+                                        <div class="user-avatar">
+                                            <img src="/thecup/resources/img/user-img/user-img-1.png" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-11">
+                                        <p class="user-name">tranvanan122</p>
+                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi đã thấy
+                                            hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
+                                        <a href="">
+                                            <p class="post">Kĩ năng sống trong công sở</p>
+                                        </a>
                                     </div>
                                 </div>
                                 <button class="btn btn-outline-secondary dropdown-toggle comment-block-button fas fa-ellipsis-v"
@@ -333,7 +395,9 @@
                             <div class="post-comment">
                                 <div class="row">
                                     <div class="col-md-1">
-                                        <div class="user-avatar"></div>
+                                        <div class="user-avatar">
+                                            <img src="/thecup/resources/img/user-img/user-img-2.png" alt="">
+                                        </div>
                                     </div>
                                     <div class="col-md-11">
                                         <div class="form-floating">
