small css fix on post page

--- a/template/covid_post.html
+++ b/template/covid_post.html
@@ -212,19 +212,41 @@
 
                         <div class="q-and-a-collapse-holder">
                             <div class="question-holder">
-                                <button class="btn" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseExample" aria-expanded="false"
-                                        aria-controls="collapseExample">
+                                <button class="btn collapse-btn" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseAnswer" aria-expanded="true"
+                                        aria-controls="collapseAnswer">
                                     <span class="add material-icons material-icons-outlined">
-                                    remove
+                                    arrow_drop_down
                                     </span>
                                 </button>
                                 <span class="question">Người đã bị covid-19 rồi và đã khỏi bệnh có nên chích vaccine ngừa covid nữa không?</span>
                             </div>
-                            <div class="collapse" id="collapseExample">
+                            <div class="collapse" id="collapseAnswer">
                                 <div class="card card-body">
                                     Chúng ta đã bị covid-19 và đã khỏi, nhưng không có gì bảo đảm là chúng ta không dính
                                     lại và nặng hơn. Do đó khi được chích vẫn nên chích ngừa.
+                                </div>
+                                <div class="vertical-divider"></div>
+                            </div>
+                        </div>
+
+                        <div class="text-break"></div>
+
+                        <div class="q-and-a-collapse-holder">
+                            <div class="question-holder">
+                                <button class="btn collapse-btn" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseAnswer1" aria-expanded="false"
+                                        aria-controls="collapseAnswer1">
+                                    <span class="add material-icons material-icons-outlined">
+                                    arrow_drop_down
+                                    </span>
+                                </button>
+                                <span class="question">Nhiều người nghe nói hiện nay virus covid-19 đã biến thể sang loại virus mới, vậy có nên ngồi chờ khi nào có vaccine ngừa virus biến thể mới rồi hãy chích không?</span>
+                            </div>
+                            <div class="collapse" id="collapseAnswer1">
+                                <div class="card card-body">
+                                    Đó là kiểu ngồi chờ chết. Chúng ta vẫn phải chủng ngừa vaccine covid-19, còn biến
+                                    thể của chúng khi nào có thuốc sẽ tính sau.
                                 </div>
                                 <div class="vertical-divider"></div>
                             </div>
@@ -289,7 +311,8 @@
                                     </div>
                                     <div class="col-md-11">
                                         <p class="user-name">tranvanan122</p>
-                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi đã thấy
+                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi
+                                            đã thấy
                                             hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
                                         <a href="">
                                             <p class="post">Kĩ năng sống trong công sở</p>
@@ -317,7 +340,8 @@
                                     </div>
                                     <div class="col-md-11">
                                         <p class="user-name">tranvanan122</p>
-                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi đã thấy
+                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi
+                                            đã thấy
                                             hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
                                         <a href="">
                                             <p class="post">Kĩ năng sống trong công sở</p>
@@ -345,7 +369,8 @@
                                     </div>
                                     <div class="col-md-11">
                                         <p class="user-name">tranvanan122</p>
-                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi đã thấy
+                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi
+                                            đã thấy
                                             hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
                                         <a href="">
                                             <p class="post">Kĩ năng sống trong công sở</p>
@@ -373,7 +398,8 @@
                                     </div>
                                     <div class="col-md-11">
                                         <p class="user-name">tranvanan122</p>
-                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi đã thấy
+                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi
+                                            đã thấy
                                             hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
                                         <a href="">
                                             <p class="post">Kĩ năng sống trong công sở</p>
@@ -535,7 +561,8 @@
                             <a href="/thecup/template/economy.html">
                                 <div class="footer-content-box">
                                     <div class="footer-content-box-inner">
-                                        <img class="content-box-icon material-icons" src="/thecup/resources/img/icon/ic_economy.svg">
+                                        <img class="content-box-icon material-icons"
+                                             src="/thecup/resources/img/icon/ic_economy.svg">
                                         <div class="content-box-divider1"></div>
                                         <div class="content-box-divider2"></div>
                                         <p class="content-box-cat-name">Kinh tế</p>
@@ -547,7 +574,8 @@
                             <a href="/thecup/template/life.html">
                                 <div class="footer-content-box">
                                     <div class="footer-content-box-inner">
-                                        <img class="content-box-icon material-icons" src="/thecup/resources/img/icon/ic_life.svg">
+                                        <img class="content-box-icon material-icons"
+                                             src="/thecup/resources/img/icon/ic_life.svg">
                                         <div class="content-box-divider1"></div>
                                         <div class="content-box-divider2"></div>
                                         <p class="content-box-cat-name">Sống</p>
@@ -559,7 +587,8 @@
                             <a href="/thecup/template/economy.html">
                                 <div class="footer-content-box">
                                     <div class="footer-content-box-inner">
-                                        <img class="content-box-icon material-icons" src="/thecup/resources/img/icon/ic_tech.svg">
+                                        <img class="content-box-icon material-icons"
+                                             src="/thecup/resources/img/icon/ic_tech.svg">
                                         <div class="content-box-divider1"></div>
                                         <div class="content-box-divider2"></div>
                                         <p class="content-box-cat-name">Công nghệ</p>
@@ -571,7 +600,8 @@
                             <a href="/thecup/template/economy.html">
                                 <div class="footer-content-box">
                                     <div class="footer-content-box-inner">
-                                        <img class="content-box-icon material-icons" src="/thecup/resources/img/icon/ic_art.svg">
+                                        <img class="content-box-icon material-icons"
+                                             src="/thecup/resources/img/icon/ic_art.svg">
                                         <div class="content-box-divider1"></div>
                                         <div class="content-box-divider2"></div>
                                         <p class="content-box-cat-name">Nghệ thuật</p>
@@ -583,7 +613,8 @@
                             <a href="/thecup/template/economy.html">
                                 <div class="footer-content-box">
                                     <div class="footer-content-box-inner">
-                                        <img class="content-box-icon material-icons" src="/thecup/resources/img/icon/ic_sport.svg">
+                                        <img class="content-box-icon material-icons"
+                                             src="/thecup/resources/img/icon/ic_sport.svg">
                                         <div class="content-box-divider1"></div>
                                         <div class="content-box-divider2"></div>
                                         <p class="content-box-cat-name">Thể thao</p>
