--- a/template/covid_post.html
+++ b/template/covid_post.html
@@ -300,23 +300,20 @@
                         </div>
                         <div class="comment">
                             <div class="title">
-                                <p>Bình luận mới nhất</p>
+                                <p>Bình luận</p>
                             </div>
                             <div class="comment-block">
                                 <div class="row">
-                                    <div class="col-md-1">
+                                    <div class="col-2 col-md-1">
                                         <div class="user-avatar">
-                                            <img src="/thecup/resources/img/user-img/user-img-1.png" alt="">
+                                            <img src="../resources/img/user-img/user-img-1.png" alt="">
                                         </div>
                                     </div>
-                                    <div class="col-md-11">
+                                    <div class="col-10 col-md-11">
                                         <p class="user-name">tranvanan122</p>
-                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi
-                                            đã thấy
+                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi đã thấy
                                             hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
-                                        <a href="">
-                                            <p class="post">Kĩ năng sống trong công sở</p>
-                                        </a>
+                                        <p class="comment-date-time">12/05/2021 20:12</p>
                                     </div>
                                 </div>
                                 <button class="btn btn-outline-secondary dropdown-toggle comment-block-button fas fa-ellipsis-v"
@@ -333,77 +330,16 @@
                             </div>
                             <div class="comment-block">
                                 <div class="row">
-                                    <div class="col-md-1">
+                                    <div class="col-2 col-md-1">
                                         <div class="user-avatar">
-                                            <img src="/thecup/resources/img/user-img/user-img-1.png" alt="">
+                                            <img src="../resources/img/user-img/user-img-2.png" alt="">
                                         </div>
                                     </div>
-                                    <div class="col-md-11">
-                                        <p class="user-name">tranvanan122</p>
-                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi
-                                            đã thấy
-                                            hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
-                                        <a href="">
-                                            <p class="post">Kĩ năng sống trong công sở</p>
-                                        </a>
-                                    </div>
-                                </div>
-                                <button class="btn btn-outline-secondary dropdown-toggle comment-block-button fas fa-ellipsis-v"
-                                        type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
-                                <ul class="dropdown-menu dropdown-menu-end">
-                                    <li><a class="dropdown-item" href="#">Thích</a></li>
-                                    <li><a class="dropdown-item" href="#">Không thích</a></li>
-                                    <li><a class="dropdown-item" href="#">Báo cáo</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Ẩn</a></li>
-                                </ul>
-                            </div>
-                            <div class="comment-block">
-                                <div class="row">
-                                    <div class="col-md-1">
-                                        <div class="user-avatar">
-                                            <img src="/thecup/resources/img/user-img/user-img-1.png" alt="">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-11">
-                                        <p class="user-name">tranvanan122</p>
-                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi
-                                            đã thấy
-                                            hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
-                                        <a href="">
-                                            <p class="post">Kĩ năng sống trong công sở</p>
-                                        </a>
-                                    </div>
-                                </div>
-                                <button class="btn btn-outline-secondary dropdown-toggle comment-block-button fas fa-ellipsis-v"
-                                        type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
-                                <ul class="dropdown-menu dropdown-menu-end">
-                                    <li><a class="dropdown-item" href="#">Thích</a></li>
-                                    <li><a class="dropdown-item" href="#">Không thích</a></li>
-                                    <li><a class="dropdown-item" href="#">Báo cáo</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Ẩn</a></li>
-                                </ul>
-                            </div>
-                            <div class="comment-block">
-                                <div class="row">
-                                    <div class="col-md-1">
-                                        <div class="user-avatar">
-                                            <img src="/thecup/resources/img/user-img/user-img-1.png" alt="">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-11">
-                                        <p class="user-name">tranvanan122</p>
-                                        <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi
-                                            đã thấy
-                                            hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
-                                        <a href="">
-                                            <p class="post">Kĩ năng sống trong công sở</p>
-                                        </a>
+                                    <div class="col-10 col-md-11">
+                                        <p class="user-name">phanvantai123</p>
+                                        <p class="comment-text">Đã từng là quản lý và đã thất bại. Thật sự là không hề dễ. Cảm ơn
+                                            tác giá đã có một bài viết rất ý nghĩa và sâu sắc</p>
+                                        <p class="comment-date-time">12/05/2021 20:12</p>
                                     </div>
                                 </div>
                                 <button class="btn btn-outline-secondary dropdown-toggle comment-block-button fas fa-ellipsis-v"
@@ -420,12 +356,12 @@
                             </div>
                             <div class="post-comment">
                                 <div class="row">
-                                    <div class="col-md-1">
+                                    <div class="col-2 col-md-1">
                                         <div class="user-avatar">
-                                            <img src="/thecup/resources/img/user-img/user-img-2.png" alt="">
+                                            <img src="../resources/img/user-img/user-img-3.png" alt="">
                                         </div>
                                     </div>
-                                    <div class="col-md-11">
+                                    <div class="col-10 col-md-11">
                                         <div class="form-floating">
                                 <textarea class="form-control" placeholder="Leave a comment here"
                                           id="floatingTextarea"></textarea>
